# ChangeLog for zram-init:

*zram-init-11.1:
	Martin Väth <martin at mvath.de>:
	- Make typeN=- work, see https://github.com/vaeth/zram-init/issues/38.
	  Thanks to https://github.com/allixx for the report and fix.

*zram-init-11.0:
	Martin Väth <martin at mvath.de>:
	- Check only for an absolute path name, not for directory presence, see
	  https://github.com/vaeth/zram-init/issues/35
	- Add some translations. Note: then[Tab]... and else[Tab]... are not
	  recognized by xgettext; they have to be in a separate line

*zram-init-10.12:
	Martin Väth <martin at mvath.de>:
	- Make the options -M and -2 work. Thanks to GimmeHardware for the
	  report. See https://github.com/vaeth/zram-init/issues/34

*zram-init-10.11:
	Kriss:
	- Fix typo introduced in 10.10

*zram-init-10.10:
	Martin Väth <martin at mvath.de>:
	- Let mlim (-S) actually be in megabytes as documented (not in bytes).
	  See https://github.com/vaeth/zram-init/issues/32.

*zram-init-10.9:
	Martin Väth <martin at mvath.de>:
	- Workaround for zsh completion heuristics for init.d scripts.
	  Thanks to Holger Hoffstätte <holger at applied-asynchrony.com>.
	  See https://github.com/vaeth/zram-init/issues/31.

*zram-init-10.8:
	Martin Väth <martin at mvath.de>:
	- Fix zsh completion https://github.com/vaeth/zram-init/issues/31

*zram-init-10.7:
	Kriss (https://github.com/Kr1ss-XD):
	- Fix installing the localized manpages

*zram-init-10.6:
	Sebastiaan (https://github.com/SharkWipf):
	- Fix writeback settings

	Martin Väth <martin at mvath.de>:
	- Improve comments in conf.d, see
	  https://github.com/vaeth/zram-init/issues/28

*zram-init-10.5:
	Martin Väth <martin at mvath.de>:
	- Add SPDX-License-Identifier

*zram-init-10.4:
	Martin Väth <martin at mvath.de>:
	- New option -B to change default block size for ext2, ext4
	- Support setting default block size, inode ratio/number in openrc

*zram-init-10.3:
	Mattéo Rossillol‑‑Laruelle <beatussum at protonmail.com>:
	- Fix locales directory in Makefile
